# skill-stocktake

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
agents/: openai.yaml
docs/superpowers/plans/: 2026-07-05-skill-stocktake-v4.md
docs/superpowers/specs/: 2026-07-05-skill-stocktake-v4-design.md
references/: evaluation-rubric.md
scripts/: Format-Report.ps1  Get-DefaultStatePath.ps1  Get-SkillDiff.ps1  New-AuditRun.ps1  Save-Results.ps1  Scan-Skills.ps1  SkillStocktake.psm1
skill_stocktake/: __init__.py  __main__.py  artifacts.py  cli.py  discovery.py  migration.py  paths.py  redaction.py  reporting.py  security.py  state.py  usage.py
tests/: Run-Tests.ps1
tests/fixtures/bundles/a/: SKILL.md
tests/fixtures/bundles/a/scripts/: helper.ps1
tests/fixtures/config/: disabled-plugin.toml  instructions.toml
tests/fixtures/home/.codex/: AGENTS.md
tests/fixtures/home/.codex/skills/collision-a/: SKILL.md
tests/fixtures/home/.codex/skills/collision-b/: SKILL.md
tests/fixtures/metadata/: folded.md  literal.md  missing-name.md  nested.md
tests/fixtures/plugins/: inventory.json
tests/fixtures/plugins/openai-curated-remote/dual/: .codex-remote-plugin-install.json
tests/fixtures/project/: AGENTS.md
tests/fixtures/project/nested/: AGENTS.override.md
tests/fixtures/project/nested/leaf/: TEAM_GUIDE.md
tests/fixtures/references/: AGENTS.md
tests_py/: test_cli_workflows.py  test_filesystem_boundaries.py  test_pending_parity.py  test_state_workflows.py  test_v4_contracts.py
(+12 files in other folders)
