[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-skill-stocktake"
version = "4.0.0"
description = "Cross-platform, evidence-backed Codex skill ecosystem auditing"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ToxicityRadius"}]
dependencies = []

[project.scripts]
skill-stocktake = "skill_stocktake.cli:main"
